--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class = "section" id = "home">
       <div class="container grid">
        <div class="image">
-        <img src="assets/images/cookies1.png" alt="Foto dos Cookies">
+        <img src="assets/images/cookies1.jpg" alt="Foto dos Cookies">
        </div>
         <div class="text">
           <h2 class="title">Cookies artesanais, feitos com muito amor.</h2>
@@ -68,7 +68,7 @@
     <section class="section" id="about">
       <div class="container grid">
         <div class="image">
-          <img src="assets/images/paidecookie.png" alt="Luiz, o Pai de Cookie">
+          <img src="assets/images/paidecookie.jpg" alt="Luiz, o Pai de Cookie">
         </div>
         <div class="text">
           <h2 class="title">Sobre Mim</h2>
@@ -129,7 +129,7 @@
           <p>Também temos a opção de retirada, sem taxa adicional. Estamos localizados à 300m do metrô Marechal Deodoro, linha vermelha.</p>
         </header>
         <div class="image">
-          <img src="assets/images/map.png" alt="Localização Pai de Cookie">
+          <img src="assets/images/map.jpg" alt="Localização Pai de Cookie">
         </div>
       </div>
     </section>
