--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
        </div>
         <div class="text">
           <h2 class="title">Cookies artesanais, feitos com muito amor.</h2>
-        <p>Pedidos com um dia de antecedência</p>
+        <p>Pedidos com um dia de antecedência!</p>
         <a class = "button" href="#orders">Peça Aqui!</a>
         </div>
       </div>
@@ -91,13 +91,13 @@
       <div class="container grid"></div>
         <header>
           <h2 class="title">Cardápio</h2>
-          <p class="subtitle">Os três cookies são feitos com receitas totalmente diferentes, para você ter uma experiência única com cada um </p>
+          <p class="subtitle">Os três cookies são feitos com receitas totalmente diferentes, para você ter uma experiência única com cada um.</p>
         </header>
       <div class="cards grid">
         <div class="card">
           <i class="icon-crinkle"></i>
           <h3 class="title">Café</h3>
-          <p>Café com chocolate ao leite, coberto com açucar de confeiteiro.</p>
+          <p>Café com chocolate ao leite, coberto com açucar de confeiteiro</p>
           <br>
           <p><strong>3 cookies de 35g, R$12,00</strong></p>
         </div>
@@ -160,7 +160,7 @@
   <div class="container grid">
     <div class="brand">
       <a class = "logo" id="alt" href="#">Pai de <span> Cookie</span></a>
-      <p>©2021 Pai de Cookie</p>
+      <p>©2021 Pai de Cookie.</p>
       <p>Todos os direitos reservados.</p>
     </div>
     <div class="social">
