--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Pai de Cookie</title>
   <!-- CSS ICONS-->
   <link rel="stylesheet" href="./assets/fonts/style.css">
+  <link rel="shortcut icon" href="assets/images/cookie.ico" type="image/x-icon">
   <!-- CSS STYLES-->
   <link rel="stylesheet" href="style.css">
   <!-- FONTES-->
