--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <ul class="grid">
             <li><i class="icon-phone"></i> (11) 97677-3425</li>
             <li><i class="icon-ig"></i><a href="https://www.instagram.com/paidecookie" target="_blank"> @PaiDeCookie</a></li>
-            <li><i class="icon-map"></i><a href="https://goo.gl/maps/DSgYKfRhDYFQCNHy6" target="_blank"> Olímpia de Almeida Prado, 27, Barra Funda, São Paulo - SP</a></li>
+            <li><i class="icon-map"></i><a href="https://goo.gl/maps/DSgYKfRhDYFQCNHy6" target="_blank"> <address>Olímpia de Almeida Prado, 27, Barra Funda, São Paulo - SP</address></a></li>
           </ul>
         </div>
       </div>
