--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="text">
           <h2 class="title">Cookies artesanais, feitos com muito amor.</h2>
         <p>Pedidos com um dia de antecedência!</p>
-        <a class = "button" href="#orders">Peça Aqui!</a>
+        <a class = "button" href="#orders">Peça Aqui</a>
         </div>
       </div>
     </section>
@@ -79,7 +79,7 @@
           </p>
           <br>
           <p>Para não deixar a gastronomia de lado, resolvi fazer uma das coisas que eu mais tenho prazer em fazer:
-            Cookies! Juntei algumas receitas de lugares que já trabalhei e adaptei para que ficassem do jeitinho que eu gosto.
+            <strong>Cookies</strong>! Juntei algumas receitas de lugares que já trabalhei e adaptei para que ficassem do jeitinho que eu gosto.
           </p>
           <br>
         </div>
